src/objects/Win_Tracked_Object_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to track the objects to maintain in the mobile app</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To activate this configuration</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientApp_ID__c</fullName>
        <defaultValue>&apos;wings&apos;</defaultValue>
        <description>Identifier of the Wings App</description>
        <label>ClientApp ID</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Index_List__c</fullName>
        <description>Define the custom set of indexes for the current object</description>
        <label>Custom Index List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Displayable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this object will be displayed in the app</description>
        <label>Displayable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fieldset_Name_List__c</fullName>
        <description>Comma separated list of field-sets names for the object</description>
        <label>Fieldset Name List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layout_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the layout needed in the mobile app?</description>
        <label>Layout Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Header_Fieldset__c</fullName>
        <label>List Header Fieldset</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Max_Records_Before_Full_Sync__c</fullName>
        <description>Max amount of records to sync on a device to claim a full sync</description>
        <label>Max_Records Before Full Sync</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Api_Name__c</fullName>
        <description>API Name of the tracked object</description>
        <label>Object Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Only_Metadata_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only Metadata Needed</description>
        <label>Only Metadata Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_By__c</fullName>
        <description>Define the value for the &apos;ORDER BY&apos;</description>
        <label>Order By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where__c</fullName>
        <description>Value for the &apos;WHERE&apos; clause</description>
        <label>Where</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Win Tracked Object Config</label>
</CustomObject>